blue-green-deploymen/destination-rule-recom-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
  namespace: tutorial
spec:
  host: recommendation
  subsets:
  - labels:
      version: v1
    name: version-v1
  -labels:
     version: v2
   name: version-v2


  trafficPolicy:
    loadBalancer:
      simple: RANDOM
